syntax = "proto3";

package pricing;

option go_package = "github.com/alechekz/online-car-auction/services/pricing/delivery/grpc/proto:proto";

service PricingService {
  rpc GetRecommendedPrice(PriceRequest) returns (PriceResponse);
}

message PriceRequest {
  string vin = 1;
  int32 odometer = 2;
  int32 grade = 3;
  string exterior_color = 4;
  string interior_color = 5;
}

message PriceResponse {
  uint64 price = 1;
}